# SimpalsTestTask

./: README.md  conf.py  crontab.yaml  main.py  pyproject.toml  supervisord.conf
docker/: app.Dockerfile  site.conf  start.sh
log/: .gitignore
monstache/: config.toml
server/: models.py  server.py  update_server.py
services/: bnm_md.py  update_db.py
templates/: hello_template.html
