[tool.poetry]
name = "simpalstesttask"
version = "0.1.0"
description = ""
authors = ["VasiliyBologov <vasiliybologov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mongoengine = "^0.23.1"
click = "^8.0.3"
pydentic = {extras = ["email"], version = "^0.0.1-alpha.3"}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
Jinja2 = "^3.0.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
asyncio = "^3.4.3"
yacron = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
